0.1.3.0
 - Backport squeezetiny changes from changes made for squeeze2upnp 0.2.7.0 
 - armv5 build static and dynamic
 - powerpc build
 
0.1.2.0
 - Always gather metadata from LMS, <send_metadata> only stops sending of coverart, album, artist and title 
 - <send_metadata> was ignored except for 1st track

0.1.1.2
 - When streaming a webradio using wav format, pseudo file size was not set properly
 - MAC address parameter was not read properly in config file (was overflowing on <send_icy> parameter)
 - Add build date/time to version
 

0.1.1.1
 - Buffer overflow was preventing artwork to be sent (potentially overflow on long metadata even w/o artwork)