@@ -1,16 +1,16 @@
 <?xml version='1.0' standalone='yes'?>
 <extensions>
+  <description>PLUGIN_CASTBRIDGE_DESC</description>
+  <email>philippe_44@outlook.com</email>
+  <name>PLUGIN_CASTBRIDGE</name>
   <defaultState>enabled</defaultState>
   <module>Plugins::CastBridge::Plugin</module>
+  <creator>Philippe</creator>
+  <version>0.1.3.0-dev-1</version>
   <targetApplication>
+    <minVersion>7.7</minVersion>
     <maxVersion>*.*</maxVersion>
     <id>SlimServer</id>
-    <minVersion>7.7</minVersion>
   </targetApplication>
-  <email>philippe_44@outlook.com</email>
   <optionsURL>plugins/CastBridge/settings/basic.html</optionsURL>
-  <creator>Philippe</creator>
-  <version>0.1.3.0</version>
-  <name>PLUGIN_CASTBRIDGE</name>
-  <description>PLUGIN_CASTBRIDGE_DESC</description>
 </extensions>
